Fixed scrollbar component for the dropdown component

--- a/src/components/Layout/Scroll/Scroll.module.css
+++ b/src/components/Layout/Scroll/Scroll.module.css
@@ -4,9 +4,12 @@
 }
 
 .Content {
-    padding-right: 10px;
     overflow: scroll;
     max-height: 100%;
+}
+
+.Content-Overflow {
+    padding-right: 10px;
 }
 
 .ScrollBar {
@@ -24,11 +27,11 @@
     top: 0;
     right: 0;
     width: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 3px;
     cursor: pointer;
 }
 
 .Handle:hover {
-    background-color: rgba(0,0,0,0.75);
+    background-color: rgba(0, 0, 0, 0.75);
 }
